# Acontext

./: README.md  readme.md
.github/workflows/: client-release-py.yaml  client-release-ts.yaml  client-test-py.yaml  client-test-ts.yaml
src/client/acontext-cli/cmd/: docker.go
src/client/acontext-cli/internal/docker/: docker-compose.yaml
src/client/acontext-py/: pyproject.toml
src/client/acontext-py/examples/: basic_usage.py
src/client/acontext-py/src/acontext/: __init__.py  client.py  client_types.py  errors.py  messages.py  uploads.py
src/client/acontext-py/src/acontext/resources/: async_sessions.py  blocks.py  disks.py  sessions.py  spaces.py
src/client/acontext-py/src/acontext/types/: __init__.py  session.py
src/client/acontext-py/tests/: test_async_client.py  test_client.py
src/client/acontext-ts/: .npmignore  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
src/client/acontext-ts/src/: client-types.ts  client.ts  constants.ts  errors.ts  index.ts  messages.ts  uploads.ts  utils.ts
src/client/acontext-ts/src/resources/: blocks.ts  disks.ts  index.ts  sessions.ts  spaces.ts
src/client/acontext-ts/src/types/: block.ts  disk.ts  index.ts  (+2 more)
src/client/acontext-ts/tests/: client.test.ts
src/server/: .env.example  .gitignore  docker-compose.yaml
src/server/api/: readme.md
src/server/api/go/: Dockerfile
src/server/core/: api.py
src/server/core/acontext_core/: env.py
src/server/core/tests/: test_api.py
src/server/ui/components/: blocknote-editor.tsx
src/server/ui/messages/: en.json  zh.json
(+47 files in other folders)
