[project]
name = "acontext"
version = "0.0.1.dev2"
description = "Python SDK for the Acontext API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.6.1",
    "anthropic>=0.72.0"
]
keywords = ["acontext", "sdk", "client", "api"]

[project.urls]
Homepage = "https://github.com/memodb-io/Acontext"
Repository = "https://github.com/memodb-io/Acontext"
Issues = "https://github.com/memodb-io/Acontext/issues"

[dependency-groups]
dev = ["pytest", "ruff"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
